- Created FlightController test - Small FlightControllerService refactoring